# AutoTache

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: autotache.yml  schedule_test.yml
cloud_state/: offres_suivi.xlsx  seen_offer_ids.json
scripts/: create_cv_template.py  generate_cv_docx.py  generate_cv_draft.py  list_cv_candidates.py  run_autotache.ps1
src/autotache_jobs/: __init__.py  __main__.py  config.py  env.py  exporter.py  filters.py  france_travail_client.py  models.py  normalizer.py  notifications.py  parsers.py  runner.py  scoring.py  storage.py
src/autotache_jobs/cv/: __init__.py  builder.py  candidates.py  docx_generator.py  generator.py  matcher.py  offer_reader.py  profile.py  template_docx_generator.py
src/autotache_jobs/sources/: __init__.py  adzuna.py  arbeitnow.py  base.py  france_travail.py  jooble.py  jsearch.py  remotive.py  themuse.py
templates/: cv_recruiter_template.docx
tests/: test_adzuna_source.py  test_arbeitnow_source.py  test_config.py  test_cv_builder.py  test_cv_builder_summary.py  test_cv_candidates.py  test_cv_docx_generator.py  test_cv_generator.py  test_cv_matcher.py  test_cv_offer_reader.py  test_cv_profile.py  test_cv_template_docx_generator.py  test_exporter.py  test_filters.py  test_france_travail_client.py  test_jooble_source.py  test_jsearch_source.py  test_normalizer.py  test_notifications.py  test_parsers.py  test_remotive_source.py  test_runner.py  test_scoring.py  test_storage.py  test_themuse_source.py
