[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotache-jobs"
version = "0.1.0"
description = "Local France Travail job search automation for front-end and web design roles."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = [
    ".venv",
    ".git",
    ".pytest_cache",
    ".pytest-run-autotache-sources",
    ".pytest-run-verify",
    ".pytest-tmp",
    "pytest_run_autotache_sources",
]
